[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Placeholder Title"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 48

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Play"
alignment = 1
custom_minimum_size = Vector2(300, 80)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="OptionsButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Options"
alignment = 1
custom_minimum_size = Vector2(300, 80)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="CreditsButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Credits & Supporters"
alignment = 1
custom_minimum_size = Vector2(300, 80)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Exit"
alignment = 1
custom_minimum_size = Vector2(300, 80)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/ExitButton" to="." method="_on_exit_pressed"]
